--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ firebase-admin==6.3.0
 google-cloud-firestore==2.14.0
 openpyxl==3.1.2
 reportlab==4.0.7
-Pillow==10.1.0
+Pillow
 python-dateutil==2.8.2
